2012-06-26  Corinna Vinschen  <vinschen@redhat.com>

	* configure.ac (BASEHEAD_LIST): Add _cygwin.h.
	* configure: Regenerate.

2012-06-25  Kai Tietz  <ktietz@redhat.com>

	* configure.ac (BASEHEAD_LIST): Add additional required basic-
	headers.

2012-02-02  Rafaël Carré <funman@videolan.org>

	* configure.ac: Give a warning if DDK headers are not present.
	* configure.ac: Enable DDK by default only if the headers are present.
	* configure: Regenerate.
2012-02-01  Rafaël Carré <funman@videolan.org>

	* configure.ac: Move IDL generation option from --enable-sdk=idl to --enable-idl.
	* configure.ac: Enable DirectX / DDK headers by default.
	* configure: Regenerate.