@@ -1,3 +1,7 @@
+2012-06-27  Corinna Vinschen  <vinschen@redhat.com>
+
+	* include/stralign.h: Fix and add #endif comments.
+
 2012-06-26  Corinna Vinschen  <vinschen@redhat.com>
 
 	* configure.ac (BASEHEAD_LIST): Add _cygwin.h.
